# feed2email

./: README.md  justfile  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
feed2email/: cli.py  config_manager.py  database.py  email_sender.py  feed_fetcher.py  feed_manager.py  models.py  runner.py  template_renderer.py  validation.py
feed2email/core/: config_manager.py  feed_manager.py  runner.py
feed2email/db/: __init__.py  database.py  schema.sql
feed2email/fetcher/: __init__.py  feed_fetcher.py
feed2email/mailer/: email_sender.py
tests/: conftest.py  strategies.py  test_cli.py  test_config_manager.py  test_database.py  test_email_sender.py  test_feed_fetcher.py  test_feed_manager.py  test_renderer.py  test_runner.py  test_validation.py  test_z_add_run.py
tests/feeds/: all.rss  allthingsrss.feed  releases.atom  vulnerability.xml  wikipedia.xml
