[project]
name = "feed2email"
version = "0.1.0"
description = "Monitor RSS/Atom feeds and deliver new items via email"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3",
    "feedendum>=0.4",
    "platformdirs>=4.9",
    "jinja2>=3.1",
]

[project.scripts]
feed2email = "feed2email.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "hypothesis>=6.152",
    "pytest-mock>=3.15",
]

[tool.ruff]
line-length = 100
